<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="lloginViewModel"
            type="com.example.animalvision.LoginViewModel" />
    </data>

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/creme"
    tools:context=".Login">

    <TextView
        android:id="@+id/login_txt1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="100dp"
        android:text="@string/login"
        android:textColor="@color/dark_brown"
        android:textSize="30sp"
        android:textStyle="bold" />



    <EditText
        android:id="@+id/login_email"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@id/login_txt1"
        android:layout_centerInParent="true"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="30dp"
        android:text="@={lloginViewModel.linputusername}"
        android:background="@drawable/bg_et"
        android:drawableStart="@drawable/ic_phone"
        android:drawableLeft="@drawable/ic_phone"
        android:drawablePadding="15dp"
        android:gravity="center"
        android:hint="@string/name"
        android:inputType="text"
        android:paddingLeft="20dp"
        android:textColor="@color/creme"
        android:textSize="15sp"
        android:textStyle="bold"
        android:backgroundTint="@color/light_brown" />

    <EditText
        android:id="@+id/login_pass"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@id/login_email"
        android:layout_centerInParent="true"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/bg_et"
        android:drawableStart="@drawable/ic_lock"
        android:drawableLeft="@drawable/ic_lock"
        android:drawablePadding="15dp"
        android:text="@={lloginViewModel.userpassword}"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingLeft="20dp"
        android:textColor="@color/creme"
        android:textSize="15sp"
        android:textStyle="bold"
        android:backgroundTint="@color/light_brown" />

    <Button
        android:id="@+id/login_lgnbtn"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@id/login_pass"
        android:layout_centerInParent="true"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="32dp"
        android:layout_marginRight="30dp"
        android:onClick="@{() ->  lloginViewModel.onSubmit()}"
        android:background="@drawable/bg_btn"
        android:text="@string/submit"
        android:textColor="@color/creme"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center"
        android:backgroundTint="@color/dark_brown" />

    <TextView
        android:id="@+id/login_regbtn"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@id/login_lgnbtn"
        android:layout_centerInParent="true"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"

        android:background="@drawable/bg_btn"
        android:backgroundTint="@color/creme"
        android:gravity="center"
        android:text="@string/newaccount"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/log_prog"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/dark_brown"
        android:elevation="11dp"

        android:gravity="center"
        android:text="@string/loading"
        android:textColor="@color/creme"
        android:textSize="20sp"
        android:visibility="invisible" />

</RelativeLayout>
</layout>